[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints.rust]
unused = "allow"

[dependencies]
rand = "0.8.5"
union-find = "0.4.3"
bimap = "0.6.3"
threadpool = "1.8.1"
num_cpus = "1.16.0"
serde_json = "1.0.137"
tempfile = "3.15.0"
rayon = "1.10.0"
chrono = "0.4.34"
