[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints.rust]
unused = "allow"

[dependencies]
rand = "0.8"
union-find = "0.4"
bimap = "0.6"
threadpool = "1.8"
num_cpus = "1.16"
serde_json = "1.0.137"
tempfile = "3.15"
rayon = "1.10"
chrono = "0.4"
rstar = "0.12"
ordered-float = "4.6"
itertools = "0.14"
spade = "2.12"
hashbrown = "0.15"
geo = "0.29"
