[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"
build = "scripts/build.rs"

[lints.rust]
unused = "allow"

[dependencies]
rand = "0.8"
union-find = "0.4"
bimap = "0.6"
threadpool = "1.8"
num_cpus = "1.16"
serde_json = "1.0.137"
tempfile = "3.15"
hashbrown = { version = "0.15", features = ["rayon"] }
rayon = "1.10"
petgraph = "0.7.1"
chrono = "0.4"
rstar = "0.12"
ordered-float = "4.6"
itertools = "0.14"
spade = "2.12"
geo = "0.29"
voronoice = "0.2"
rand_distr = "0.4"
dashmap = "6.1"
noise = "0.9"
quick-xml = "0.37"
priority-queue = "2.5"
indicatif = {version = "0.17.11", features = ["rayon"]}
